<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_car_detail"
    tools:context=".CarDetailActivity">
    <com.google.android.gms.ads.AdView
        android:id="@+id/car_detail_ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/car_detail_banner"/>
    <android.support.v7.widget.CardView
        android:id="@+id/car_detail_chart_card"
        style="@style/AppTheme.CardView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/car_detail_graph_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:text="@string/car_detail_graph_sample_text"
                android:textColor="@color/colorAccent" />
            <com.db.chart.view.LineChartView
                android:id="@+id/car_detail_chart"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/car_detail_graph_title"
                android:contentDescription="@string/activity_car_detail_chart_content_desc"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/AppTheme.CardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/car_detail_name"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/car_detail_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"/>
                    <TextView
                        android:id="@+id/car_detail_make"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"/>
                    <TextView
                        android:id="@+id/car_detail_model"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_detail_avg_mpg_label"
                        android:layout_margin="4dp"/>
                    <TextView
                        android:id="@+id/car_detail_avg_mpg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"/>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/car_detail_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/colorAccent"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_directions_car_black_48dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/car_detail_delete_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/car_detail_delete_car_button"
                android:nextFocusRight="@+id/car_detail_edit_car"
                android:nextFocusDown="@+id/car_detail_fillups_rv"/>
            <Button
                android:id="@+id/car_detail_edit_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/car_detail_delete_car"
                android:text="@string/car_detail_edit_car_button"
                android:nextFocusRight="@+id/car_detail_add_fillup"
                android:nextFocusLeft="@+id/car_detail_delete_car"
                android:nextFocusDown="@+id/car_detail_fillups_rv"/>
            <Button
                android:id="@+id/car_detail_add_fillup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/car_detail_add_fillup_button"
                android:nextFocusLeft="@+id/car_detail_edit_car"
                android:nextFocusDown="@+id/car_detail_fillups_rv"/>

        </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        style="@style/AppTheme.CardView">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/car_detail_fillups_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:nextFocusUp="@id/car_detail_edit_car"/>
        <RelativeLayout
            android:id="@+id/car_detail_no_fillups_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">
            <ImageView
                android:id="@+id/car_detail_no_fillups_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_local_gas_station_black_48dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="18sp"
                android:text="@string/car_detail_no_fillups_text"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
