<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    android:id="@+id/select_station_address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_station_address_input_hint"
                    android:nextFocusDown="@+id/select_station_address_find_button"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/select_station_address_find_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_station_address_find_text"
                android:nextFocusUp="@id/select_station_address_input"
                android:nextFocusDown="@+id/select_station_nearby_rv"
                android:gravity="start">
                <requestFocus/>
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/select_station_nearby_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/select_station_nearby_rv"
                    android:layout_alignParentStart="true"/>
                <ImageButton
                    android:id="@+id/select_station_nearby_reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_refresh_black_18dp"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <ProgressBar
                android:id="@+id/select_station_nearby_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@android:style/Widget.ProgressBar.Large"/>
            <RelativeLayout
                android:id="@+id/nearby_station_no_connectivity_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_above="@+id/nearby_station_no_connectivity_icon"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/nearby_station_no_connectivity"/>
                <ImageView
                    android:id="@+id/nearby_station_no_connectivity_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_portable_wifi_off_black_48dp"/>
            </RelativeLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/select_station_nearby_rv"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/colorAccent"
                android:nextFocusUp="@id/select_station_address_find_button"
                android:nextFocusDown="@+id/select_station_used_rv">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
</LinearLayout>
